changed clear color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row">
             <button class="number">0</button>
             <button class="number">.</button>
-            <button class="number">C</button>
+            <button class="clear">C</button>
             </div>
         </div>
     </div>
