added update display func for nums, operations, and dot. Also added clear

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">0</div>
+        <div class="display"></div>
         <div class="buttons">
             <div class="row">
-            <button class="plus">+</button>
-            <button class="subtract">-</button>
-            <button class="multiply">x</button>
-            <button class="divide">/</button>
+            <button class="operation plus">+</button>
+            <button class="operation subtract">-</button>
+            <button class="operation multiply">x</button>
+            <button class="operation divide">/</button>
             <button class="equals">=</button>
             </div>
             <div class="row">
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
             <button class="number">0</button>
-            <button class="number">.</button>
+            <button class="dot">.</button>
             <button class="clear">C</button>
             </div>
         </div>
